Fix SP layout bug

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -217,9 +217,10 @@ footer{
         }
     }
     & .push-btn{
-        margin-top: -16%;
+        position: fixed;
+        bottom: 0;
         width: 80%;
-        height: 30vh;
+        height: 50vw;
         background-size: contain;
         background-position: center;
         background-image : url(../img/hs_tongue.png);
@@ -236,7 +237,7 @@ footer{
         @include media-queries-tab {
             position: fixed;
             bottom: 0;
-            height: 13vh;
+            height: 11vh;
         }
         @include media-queries-pc {
             position: fixed;
@@ -247,13 +248,17 @@ footer{
         }
         & input{
             width: 100%;
-            height: 175px;
+            height: 45vw;
             position: fixed;
             left: 1%;
             bottom: 0%;
             border: none;
             outline: none;
-
+            @include media-queries-tab {
+                height: 11vh;
+                width: 30vw;
+                left: 32%;
+            }
             @include media-queries-pc {
                 left: 1%;
                 bottom: 2%;
@@ -282,12 +287,13 @@ footer{
 }
 
 #app{
-    height: 100vh;
-    background-size: contain;
+    padding: 60% 0;
+    background-size: cover;
     background-position: center;
     background-image : url(../img/hs_mouth.png);
     @include media-queries-tab {
         background-position: bottom;
+        padding-top: 0;
         position: fixed;
         display: flex;
         align-items: center;
@@ -299,6 +305,7 @@ footer{
     }
     @include media-queries-pc {
         background-position: bottom;
+        padding-top: 0;
         position: fixed;
         display: flex;
         align-items: center;
@@ -315,16 +322,13 @@ footer{
 
 .slot-container{
     color: white;
-    padding: 45% 0;
     @include media-queries-tab {
         position: fixed;
-        padding: 0;
         margin: 11% auto;
         width: 40%;
     }
     @include media-queries-pc {
         position: fixed;
-        padding: 0;
         margin: 70px auto;
         width: 27%;
     }
